fix: replace List.getFirst()/getLast() with JDK17-safe equivalents in test files
Leftover uncommitted fixes from the prior backport chunk. List.getFirst() is a
JDK21+ SequencedCollection method; replace with get(0) for JDK17 compatibility.